[gd_scene load_steps=6 format=3 uid="uid://m32rf8bgbsqs"]

[ext_resource type="Script" path="res://scripts/menu.gd" id="1_1lt66"]
[ext_resource type="Texture2D" uid="uid://cjpja7jnm7dgx" path="res://art/mainmenu/Frame 1 (1).png" id="2_bjdic"]
[ext_resource type="PackedScene" uid="uid://2uqyrmvyqs5u" path="res://scenes/options/scenes/options_menu.tscn" id="3_nqggx"]
[ext_resource type="Theme" uid="uid://4hkej5w50ixp" path="res://scenes/pause_menu.tres" id="4_kfhcf"]
[ext_resource type="FontFile" uid="uid://qgpnaaet74fu" path="res://TT Octosquares Trial Compressed Bold.ttf" id="5_7klpp"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_kfhcf")
script = ExtResource("1_1lt66")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.667
anchor_bottom = 1.667
offset_right = -1280.64
offset_bottom = -720.36
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bjdic")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.344
anchor_bottom = 1.114
offset_left = 755.0
offset_top = 668.0
offset_right = -1501.48
offset_bottom = -119.12
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="separater" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="options_menu" parent="." instance=ExtResource("3_nqggx")]
visible = false
layout_mode = 1

[node name="play" type="Button" parent="."]
layout_mode = 2
offset_left = 767.0
offset_top = 514.0
offset_right = 1114.0
offset_bottom = 618.0
theme = ExtResource("4_kfhcf")
theme_override_fonts/font = ExtResource("5_7klpp")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 771.0
offset_top = 775.0
offset_right = 1118.0
offset_bottom = 879.0
theme = ExtResource("4_kfhcf")
theme_override_fonts/font = ExtResource("5_7klpp")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_left = 765.0
offset_top = 644.0
offset_right = 1112.0
offset_bottom = 748.0
theme = ExtResource("4_kfhcf")
theme_override_fonts/font = ExtResource("5_7klpp")
theme_override_font_sizes/font_size = 50
text = "Settings"

[node name="restart" type="Button" parent="."]
layout_mode = 0
offset_left = 776.0
offset_top = 908.0
offset_right = 1123.0
offset_bottom = 1012.0
theme = ExtResource("4_kfhcf")
theme_override_fonts/font = ExtResource("5_7klpp")
theme_override_font_sizes/font_size = 50
text = "Restart"

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="restart" to="." method="_on_restart_pressed"]
